# bookhub-fastapi

fast_as/: dependencies.py  main.py  pyproject.toml  utils.py
fast_as/database/: connection.py  db_config.py  redis.py
fast_as/migrations/: env.py
fast_as/migrations/versions/: 0b41e7b439fc_add_review_table.py  2833dd796e98_add_relationships.py  3ab061620440_init.py  a428f3c74b3e_add_user_role.py  aa68b64272fa_add_tag_table.py  b08cffcd06cd_password_hashed_add.py
fast_as/models/: book_model.py  book_tag_model.py  reviews_model.py  tags_model.py  user_model.py
fast_as/routes/: book_route.py  review_route.py  tag_route.py  user_route.py
fast_as/services/: book_service.py  review_service.py  tag_service.py  user_service.py
